# sanzang/src/lib/openapi.json
@@ -286,6 +286,12 @@
             ]
           },
           {
+            "type": "string",
+            "enum": [
+              "UsernameTaken"
+            ]
+          },
+          {
             "type": "object",
             "required": [
               "InvalidInput"
@@ -327,8 +333,7 @@
           "host_id",
           "players",
           "max_players",
-          "created_at",
-          "team_draft"
+          "created_at"
         ],
         "properties": {
           "code": {
@@ -354,9 +359,6 @@
             "items": {
               "$ref": "#/components/schemas/Player"
             }
-          },
-          "team_draft": {
-            "$ref": "#/components/schemas/TeamDraftManager"
           }
         }
       },
@@ -434,106 +436,6 @@
             "type": "string"
           }
         }
-      },
-      "Round": {
-        "type": "object",
-        "required": [
-          "round",
-          "pool",
-          "competition",
-          "team_size",
-          "starting_drafter_id",
-          "current_drafter_id",
-          "player_to_picks"
-        ],
-        "properties": {
-          "competition": {
-            "type": "string"
-          },
-          "current_drafter_id": {
-            "type": "string"
-          },
-          "player_to_picks": {
-            "type": "object",
-            "additionalProperties": {
-              "type": "array",
-              "items": {
-                "type": "string"
-              }
-            },
-            "propertyNames": {
-              "type": "string"
-            }
-          },
-          "pool": {
-            "type": "string"
-          },
-          "round": {
-            "type": "integer",
-            "format": "int32",
-            "minimum": 0
-          },
-          "starting_drafter_id": {
-            "type": "string"
-          },
-          "team_size": {
-            "type": "integer",
-            "format": "int32",
-            "minimum": 0
-          }
-        }
-      },
-      "TeamDraftManager": {
-        "type": "object",
-        "required": [
-          "yapper_id",
-          "yapper_index",
-          "max_rounds",
-          "phase",
-          "round_data",
-          "player_points"
-        ],
-        "properties": {
-          "max_rounds": {
-            "type": "integer",
-            "format": "int32",
-            "minimum": 0
-          },
-          "phase": {
-            "$ref": "#/components/schemas/TeamDraftPhase"
-          },
-          "player_points": {
-            "type": "object",
-            "additionalProperties": {
-              "type": "integer",
-              "format": "int32",
-              "minimum": 0
-            },
-            "propertyNames": {
-              "type": "string"
-            }
-          },
-          "round_data": {
-            "$ref": "#/components/schemas/Round"
-          },
-          "yapper_id": {
-            "type": "string"
-          },
-          "yapper_index": {
-            "type": "integer",
-            "format": "int32",
-            "minimum": 0
-          }
-        }
-      },
-      "TeamDraftPhase": {
-        "type": "string",
-        "enum": [
-          "YapperChoosing",
-          "Drafting",
-          "Awarding",
-          "Complete"
-        ]
       }
     }
   }
